@@ -90,6 +90,7 @@ public:
 	// commands
 	enum {
 		socks5_connect = 1,
+		socks5_bind = 2,
 		socks5_udp_associate = 3
 	};
 
@@ -97,6 +98,7 @@ public:
 		: proxy_base(io_service)
 		, m_version(5)
 		, m_command(socks5_connect)
+		, m_listen(0)
 	{}
 
 	void set_version(int v) { m_version = v; }
@@ -112,6 +114,40 @@ public:
 	{
 		m_user = user;
 		m_password = password;
+	}
+
+	template <typename Handler>
+	void async_accept(Handler const& handler)
+	{
+		TORRENT_ASSERT(m_listen == 1);
+		TORRENT_ASSERT(m_command == socks5_bind);
+
+		// to avoid unnecessary copying of the handler,
+		// store it in a shaed_ptr
+		error_code e;
+#if defined TORRENT_ASIO_DEBUGGING
+		add_outstanding_async("socks5_stream::connect1");
+#endif
+		connect1(e, boost::make_shared<handler_type>(handler));
+	}
+
+	template <typename Handler>
+	void async_listen(tcp::endpoint const& ep, Handler const& handler)
+	{
+		m_command = socks5_bind;
+
+		m_remote_endpoint = ep;
+
+		// to avoid unnecessary copying of the handler,
+		// store it in a shaed_ptr
+		boost::shared_ptr<handler_type> h(new handler_type(handler));
+
+#if defined TORRENT_ASIO_DEBUGGING
+		add_outstanding_async("socks5_stream::name_lookup");
+#endif
+		tcp::resolver::query q(m_hostname, to_string(m_port).elems);
+		m_resolver.async_resolve(q, boost::bind(
+			&socks5_stream::name_lookup, this, _1, _2, h));
 	}
 
 	void set_dst_name(std::string const& host)
@@ -139,12 +175,25 @@ public:
 	}
 #endif
 
+#ifndef BOOST_NO_EXCEPTIONS
+	endpoint_type local_endpoint() const
+	{
+		return m_local_endpoint;
+	}
+#endif
+
+	endpoint_type local_endpoint(error_code&) const
+	{
+		return m_local_endpoint;
+	}
+
 	// TODO: 2 add async_connect() that takes a hostname and port as well
 	template <class Handler>
 	void async_connect(endpoint_type const& endpoint, Handler const& handler)
 	{
 		// make sure we don't try to connect to INADDR_ANY. binding is fine,
 		// and using a hostname is fine on SOCKS version 5.
+		TORRENT_ASSERT(m_command != socks5_bind);
 		TORRENT_ASSERT(endpoint.address() != address()
 			|| (!m_dst_name.empty() && m_version == 5));
 
@@ -192,10 +241,19 @@ private:
 	std::string m_password;
 	std::string m_dst_name;
 
+	// when listening via a socks proxy, this is the IP and port our listen
+	// socket bound to
+	endpoint_type m_local_endpoint;
+
 	int m_version;
 
-	// the socks command to send for this connection (connect or udp associate)
+	// the socks command to send for this connection (connect, bind,
+	// udp associate)
 	int m_command;
+
+	// set to one when we're waiting for the
+	// second message to accept an incoming connection
+	int m_listen;
 };
 
 }
