@@ -1,4 +1,5 @@
 
+	* restore support for incoming connections over SOCKS5 (disabled by default)
 	* use unique peer_ids per connection
 	* fix iOS build on recent SDK
 	* fix tracker connection bind issue for IPv6 trackers
